// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should highlight on hover 1`] = `
.c0 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 0.875em;
  color: inherit;
  padding: 0;
  margin: 0;
}

.c0:hover,
.c0:focus {
  color: #008ad2;
}

.c0:hover svg path,
.c0:focus svg path {
  fill: #008ad2;
}

.c0 svg {
  vertical-align: middle;
}

.c1 {
  margin-left: 0.6em;
}

<IconButton
  highlightOnHover={true}
  icon={[Function]}
  iconOnly={false}
  onClick={[Function]}
>
  <IconButton__StyledButton
    highlightOnHover={true}
    iconOnly={false}
    onClick={[Function]}
  >
    <button
      className="c0"
      onClick={[Function]}
      type="button"
    >
      <Icon>
        <svg />
      </Icon>
      <IconButton__Text>
        <span
          className="c1"
        >
          Icon button text
        </span>
      </IconButton__Text>
    </button>
  </IconButton__StyledButton>
</IconButton>
`;

exports[`IconButton should render correctly 1`] = `
<IconButton__StyledButton
  highlightOnHover={true}
  iconOnly={false}
  onClick={[Function]}
>
  <Icon />
  <IconButton__Text>
    Icon button text
  </IconButton__Text>
</IconButton__StyledButton>
`;

exports[`IconButton should render icon only 1`] = `
.c2 {
  background-color: rgba(97,97,97,0.9) !important;
  font-size: 0.625rem !important;
  line-height: 2.2em !important;
  padding: 0 0.6em !important;
  border-radius: 2px !important;
  white-space: pre;
}

.c2::before,
.c2::after {
  border-bottom: none !important;
  border-top: none !important;
}

.c1 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c0 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 0.875em;
  color: inherit;
  padding: 0;
  margin: 0;
}

.c0:hover,
.c0:focus {
  color: #008ad2;
}

.c0:hover svg path,
.c0:focus svg path {
  fill: #008ad2;
}

.c0 svg {
  vertical-align: middle;
}

<IconButton
  highlightOnHover={true}
  icon={[Function]}
  iconOnly={true}
  onClick={[Function]}
>
  <Tooltip
    content="Icon button text"
  >
    <div>
      <div
        data-for="tooltip-1"
        data-tip={true}
      >
        <IconButton__StyledButton
          highlightOnHover={true}
          iconOnly={true}
          onClick={[Function]}
        >
          <button
            className="c0"
            onClick={[Function]}
            type="button"
          >
            <Icon>
              <svg />
            </Icon>
            <VisuallyHidden>
              <span
                className="c1"
              >
                Icon button text
              </span>
            </VisuallyHidden>
          </button>
        </IconButton__StyledButton>
      </div>
      <Tooltip__StyledTooltip
        delayShow={200}
        effect="solid"
        id="tooltip-1"
        place="bottom"
      >
        <ReactTooltip
          className="c2"
          delayShow={200}
          effect="solid"
          id="tooltip-1"
          insecure={true}
          place="bottom"
          resizeHide={true}
          wrapper="div"
        >
          <div
            className="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
        </ReactTooltip>
      </Tooltip__StyledTooltip>
    </div>
  </Tooltip>
</IconButton>
`;
